Clean up code based on automatic IntelliJ suggestions.